# system-integration-microservice

./: Cargo.toml  README.md
src/: main.rs
src/api/: handlers.rs  router.rs
src/domain/: channel.rs  events.rs  mod.rs
src/infrastructure/: messaging.rs
src/shared/: contracts.rs
